5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1674_1101.log
== TEST (2019-04-25 11:32:00) 
-- CODE:
consumo=float(input());
tipo=input().upper();
print("Entradas: ",consumo "kWh e tipo",tipo)
if(tipo=="R" or tipo=="I" or tipo=="C"):
	if(tipo=="R"):
		if(consumo<=500):
			a=consumo*0.44
			print("Valor total: R$ ",a)
		else:
			a=consumo*0.65
			print("Valor total: R$ ",a)
	elif(tipo=="C"):
		if(consumo<=1000):
			a=consumo*0.55
			print("Valor total: R$ ",a)
		else:
			a=consumo*0.60
			print("Valor total: R$ ",a)
	else:
		if(consumo<=5000):
			a=consumo*0.55
			print("Valor total: R$ ",a)
		else:
			a=consumo*0.60
			print("Valor total: R$ ",a)
else:
	print("Dados invalidos")
		
-- ERROR:
File "XXXX", line 3
    print("Entradas: ",consumo "kWh e tipo",tipo)
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:32:28) 
-- CODE:
consumo=float(input());
tipo=input().upper();
print("Entradas: ",consumo, "kWh e tipo",tipo)
if(tipo=="R" or tipo=="I" or tipo=="C"):
	if(tipo=="R"):
		if(consumo<=500):
			a=consumo*0.44
			print("Valor total: R$ ",a)
		else:
			a=consumo*0.65
			print("Valor total: R$ ",a)
	elif(tipo=="C"):
		if(consumo<=1000):
			a=consumo*0.55
			print("Valor total: R$ ",a)
		else:
			a=consumo*0.60
			print("Valor total: R$ ",a)
	else:
		if(consumo<=5000):
			a=consumo*0.55
			print("Valor total: R$ ",a)
		else:
			a=consumo*0.60
			print("Valor total: R$ ",a)
else:
	print("Dados invalidos")
		
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:34:05) 
-- CODE:
consumo=float(input());
tipo=input().upper();
print("Entradas: ",consumo, "kWh e tipo",tipo)
if(tipo=="R" or tipo=="I" or tipo=="C"):
	if(tipo=="R"):
		if(consumo<=500):
			a=consumo*0.44
			print("Valor total: R$ ",round(a,2))
		else:
			a=consumo*0.65
			print("Valor total: R$ ",round(a,2))
	elif(tipo=="C"):
		if(consumo<=1000):
			a=consumo*0.55
			print("Valor total: R$ ",round(a,2))
		else:
			a=consumo*0.60
			print("Valor total: R$ ",round(a,2))
	else:
		if(consumo<=5000):
			a=consumo*0.55
			print("Valor total: R$ ",round(a,2))
		else:
			a=consumo*0.60
			print("Valor total: R$ ",round(a,2))
else:
	print("Dados invalidos")
		
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:34:19) 
-- CODE:
consumo=float(input());
tipo=input().upper();
print("Entradas: ",consumo, "kWh e tipo",tipo)
if(tipo=="R" or tipo=="I" or tipo=="C"):
	if(tipo=="R"):
		if(consumo<=500):
			a=consumo*0.44
			print("Valor total: R$ ",round(a,2))
		else:
			a=consumo*0.65
			print("Valor total: R$ ",round(a,2))
	elif(tipo=="C"):
		if(consumo<=1000):
			a=consumo*0.55
			print("Valor total: R$ ",round(a,2))
		else:
			a=consumo*0.60
			print("Valor total: R$ ",round(a,2))
	else:
		if(consumo<=5000):
			a=consumo*0.55
			print("Valor total: R$ ",round(a,2))
		else:
			a=consumo*0.60
			print("Valor total: R$ ",round(a,2))
else:
	print("Dados invalidos")
		
-- EXECUTION TIME:
0.188322
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:34:41) 
-- CODE:
consumo=float(input());
tipo=input().upper();
print("Entradas: ",consumo, "kWh e tipo",tipo)
if(tipo=="R" or tipo=="I" or tipo=="C"):
	if(tipo=="R"):
		if(consumo<=500):
			a=consumo*0.44
			print("Valor total: R$ ",round(a,2))
		else:
			a=consumo*0.65
			print("Valor total: R$ ",round(a,2))
	elif(tipo=="C"):
		if(consumo<=1000):
			a=consumo*0.55
			print("Valor total: R$ ",round(a,2))
		else:
			a=consumo*0.60
			print("Valor total: R$ ",round(a,2))
	else:
		if(consumo<=5000):
			a=consumo*0.55
			print("Valor total: R$ ",round(a,2))
		else:
			a=consumo*0.60
			print("Valor total: R$ ",round(a,2))
else:
	print("Dados invalidos")
		
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:35:05) 
-- CODE:
consumo=float(input());
tipo=input().upper();
print("Entradas: ",consumo, "kWh e tipo",tipo)
if(tipo=="R" or tipo=="I" or tipo=="C"):
	if(tipo=="R"):
		if(consumo<=500):
			a=consumo*0.44
			print("Valor total: R$ ",round(a,2))
		else:
			a=consumo*0.65
			print("Valor total: R$ ",round(a,2))
	elif(tipo=="C"):
		if(consumo<=1000):
			a=consumo*0.55
			print("Valor total: R$ ",round(a,2))
		else:
			a=consumo*0.60
			print("Valor total: R$ ",round(a,2))
	else:
		if(consumo<=5000):
			a=consumo*0.55
			print("Valor total: R$ ",round(a,2))
		else:
			a=consumo*0.60
			print("Valor total: R$ ",round(a,2))
else:
	print("Dados invalidos")
		
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:35:58) 
-- CODE:
consumo=float(input());
tipo=input().upper();
print("Entradas: ",consumo, "kWh e tipo",tipo)
if(tipo=="R" or tipo=="I" or tipo=="C"):
	if(tipo=="R"):
		if(consumo<=500):
			a=consumo*0.44
			print("Valor total: R$ ",round(a,2))
		else:
			a=consumo*0.65
			print("Valor total: R$ ",round(a,2))
	elif(tipo=="C"):
		if(consumo<=1000):
			a=consumo*0.55
			print("Valor total: R$ ",round(a,2))
		else:
			a=consumo*0.60
			print("Valor total: R$ ",round(a,2))
	else:
		if(consumo<=5000):
			a=consumo*0.55
			print("Valor total: R$ ",round(a,2))
		else:
			a=consumo*0.60
			print("Valor total: R$ ",round(a,2))
else:
	print("Dados invalidos")
		
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:38:36) 
-- CODE:
consumo=float(input());
tipo=input().upper();
print("Entradas: ",consumo, "kWh e tipo",tipo)
if(tipo=="R" or tipo=="I" or tipo=="C") and(consumo>0):
	if(tipo=="R"):
		if(consumo<=500):
			a=consumo*0.44
			print("Valor total: R$ ",round(a,2))
		else:
			a=consumo*0.65
			print("Valor total: R$ ",round(a,2))
	elif(tipo=="C"):
		if(consumo<=1000):
			a=consumo*0.55
			print("Valor total: R$ ",round(a,2))
		else:
			a=consumo*0.60
			print("Valor total: R$ ",round(a,2))
	else:
		if(consumo<=5000):
			a=consumo*0.55
			print("Valor total: R$ ",round(a,2))
		else:
			a=consumo*0.60
			print("Valor total: R$ ",round(a,2))
else:
	print("Dados invalidos")
		
-- EXECUTION TIME:
0.181037
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo R
Valor total: R$  621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
